//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  hostedQuizzes Quiz [not null]
  userAnswers UserAnswers [not null]
  host Boolean [not null]
  password String [not null]
  collectedInfo String [not null]
}

Table Quiz {
  id String [pk]
  name String [not null]
  level Int [not null]
  topics String[] [not null]
  resultState QuizResultState [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  hostId String [not null]
  host User [not null]
  userAnswers UserAnswers [not null]
  QuestionAndAnswer QuestionAndAnswer [not null]
}

Table QuestionAndAnswer {
  id String [pk]
  text String [not null]
  type QuestionType [not null]
  options String[] [not null]
  correctAnswer String
  correctOptions String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  quizId String [not null]
  quiz Quiz [not null]
}

Table Answer {
  id String [pk]
  type QuestionType [not null]
  submittedAnswer String
  submittedOptions String[] [not null]
  isCorrect Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  questionId String [not null]
  UserAnswers UserAnswers [not null]
  userAnswersId String [not null]
}

Table UserAnswers {
  id String [pk]
  userId String [not null]
  quizId String [not null]
  user User [not null]
  quiz Quiz [not null]
  answers Answer [not null]
}

Enum QuestionType {
  MCQ_SINGLE
  MCQ_MULTI
  TRUE_FALSE
  SHORT_ANSWER
  NUMERICAL
}

Enum QuizResultState {
  IN_PROGRESS
  HOST_ONLY
  OPEN_TO_ALL
}

Ref: Quiz.hostId > User.id

Ref: QuestionAndAnswer.quizId > Quiz.id

Ref: Answer.userAnswersId > UserAnswers.id

Ref: UserAnswers.userId > User.id

Ref: UserAnswers.quizId > Quiz.id